examples/good/05-03-partial-application-and-definition.hp
def fun :: [Int] -> Int = head;

fun [5,3,2];

def sum :: Int -> Int -> Int x y = x + y;

head [sum 10, sum 5, sum 1] 5;

def partial :: Int -> Int = sum 100;

partial 2;
