examples/bad/attempt-to-create-polimorfic-type.hp
def my_head :: [a] -> a = head;
